k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-e2e
  namespace: devops-e2e
  labels:
    app: devops-e2e
spec:
  type: LoadBalancer
  selector:
    app: devops-e2e
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
